--- a/python_class/str.ipynb
+++ b/python_class/str.ipynb
@@ -74,8 +74,686 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "aa4a092e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current estimate cubed =  27.0046623877321\n",
+      "Next guess to try =  3.0000000099376725\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"what x to find the cube root of?\"))\n",
+    "g = float(input(\"what guess to start with?\"))\n",
+    "print(\"Current estimate cubed = \", g**3)\n",
+    "\n",
+    "next_g = g - ((g**3 - x)/(3*g**2))\n",
+    "print('Next guess to try = ', next_g)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6717fdc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "750.0 is 25.0% of 3000\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 3000\n",
+    "fraction = 1/4\n",
+    "\n",
+    "print(f'{num*fraction} is {fraction*100}% of {num}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c1f62722",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Equal? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "secret = 5\n",
+    "guess = int(input(\"Please guess a number: \"))\n",
+    "equal = secret == guess\n",
+    "print(\"Equal?\", equal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1751831a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct!\n"
+     ]
+    }
+   ],
+   "source": [
+    "secret = 10\n",
+    "answer = int(input(\"Please guess a number: \"))\n",
+    "if answer < secret:\n",
+    "    print(\"Too low\")\n",
+    "elif answer > secret:\n",
+    "    print(\"Too high\")\n",
+    "else:\n",
+    "    print(\"Correct!\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "cfe8f150",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":(\n",
+      ":(\n",
+      ":(\n",
+      ":(\n",
+      "You got out!\n"
+     ]
+    }
+   ],
+   "source": [
+    "where = input(\"Go left or right? \")\n",
+    "n = 0\n",
+    "while where == \"right\":\n",
+    "    n = n + 1\n",
+    "    if n > 2:\n",
+    "        print(\":(\")\n",
+    "    where = input(\"Go left or right? \")\n",
+    "\n",
+    "\n",
+    "print(\"You got out!\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "78fd1b7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 0\n",
+    "while n < 5:\n",
+    "    print(n)\n",
+    "    n = n + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "6b4fa1c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 0\n",
+    "while n < 5:\n",
+    "    n = n + 1\n",
+    "    print(n)\n",
+    "    if n == 3:\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b9435b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(4,0,-1):\n",
+    "    print(n)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "12fc10e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum is 500000000500000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "mysum = 0\n",
+    "start = int(input(\"where do you want to start? \"))\n",
+    "end = int(input(\"where do you want to end? \"))\n",
+    "for n in range(start, end + 1):\n",
+    "    mysum = mysum + n\n",
+    "\n",
+    "print(\"The sum is\", mysum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "76cdcf8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 0\n",
+    "count = 0\n",
+    "for n in range(5):\n",
+    "    if (n%2) == 0:\n",
+    "        count += 1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "05212065",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is an i or u in the string.\n",
+      "There is an i or u in the string.\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"demo lops - fruit loops\"\n",
+    "\n",
+    "for char in s:\n",
+    "    if char ==\"i\" or char ==\"u\":\n",
+    "        print(\"There is an i or u in the string.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "45051150",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is an i or u in the string.\n",
+      "There is an i or u in the string.\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"demo lops - fruit loops\"\n",
+    "\n",
+    "for char in s:\n",
+    "    if char in \"iu\":\n",
+    "        print(\"There is an i or u in the string.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "77c71e49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "abcd\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"abaaaaacda\"\n",
+    "\n",
+    "vessel = \"\"\n",
+    "n = 0\n",
+    "for char in s:\n",
+    "    if char not in vessel:\n",
+    "        vessel += char\n",
+    "        n += 1\n",
+    "\n",
+    "print(len(vessel))\n",
+    "print(vessel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "4ec80a72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Negative numbers do not have real square roots.\n"
+     ]
+    }
+   ],
+   "source": [
+    "guess = 0\n",
+    "x = int(input(\"Enter an integer: \"))\n",
+    "while guess**2 < x:\n",
+    "    guess = guess + 1\n",
+    "if guess**2 == x:\n",
+    "    print(\"Sequare root is\", guess)\n",
+    "elif x < 0:\n",
+    "    print(\"Negative numbers do not have real square roots.\")\n",
+    "else:\n",
+    "    print(x,\"is not a perfect square.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "9ce66bd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I don't found it yet.\n"
+     ]
+    }
+   ],
+   "source": [
+    "secret = 69\n",
+    "found = False\n",
+    "for i in range(11):\n",
+    "    if i == secret:\n",
+    "        print(\"Found it! The secret number is\", secret)\n",
+    "        found = True\n",
+    "        break\n",
+    "if not found:\n",
+    "    print(\"I don't found it yet.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "cb746760",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cube root of -8 is -2\n"
+     ]
+    }
+   ],
+   "source": [
+    "cube = int(input(\"Enter an integer to cube: \"))\n",
+    "\n",
+    "for guess in range(abs(cube)+1):\n",
+    "    if guess**3 == abs(cube):\n",
+    "        break\n",
+    "if guess**3 != abs(cube):\n",
+    "    print(cube, \"is not a perfect cube\")\n",
+    "else:\n",
+    "    if cube < 0:\n",
+    "        guess = -guess\n",
+    "    print(f\"Cube root of {cube} is {guess}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "65e2f47e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alyssa: 3, Ben: 1, Cindy: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for Alyssa in range(2,11):\n",
+    "    Ben = Alyssa - 2\n",
+    "    Cindy = Alyssa * 2\n",
+    "    if Alyssa + Ben + Cindy == 10:\n",
+    "        break\n",
+    "\n",
+    "print(f\"Alyssa: {Alyssa}, Ben: {Ben}, Cindy: {Cindy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "cb02349f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "0.9999999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "for i in range(10):\n",
+    "    x += 0.1\n",
+    "print(x == 1)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3db85716",
+   "metadata": {},
+   "source": [
+    "# 二进制算法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a5771692",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remainder = 0.1\n",
+      "Remainder = 0.2\n",
+      "Remainder = 0.4\n",
+      "Remainder = 0.8\n",
+      "Remainder = 0.6000000000000001\n",
+      "Remainder = 0.20000000000000018\n",
+      "Remainder = 0.40000000000000036\n",
+      "Remainder = 0.8000000000000007\n",
+      "Remainder = 0.6000000000000014\n",
+      "Remainder = 0.20000000000000284\n",
+      "Remainder = 0.4000000000000057\n",
+      "Remainder = 0.8000000000000114\n",
+      "Remainder = 0.6000000000000227\n",
+      "Remainder = 0.20000000000004547\n",
+      "Remainder = 0.40000000000009095\n",
+      "Remainder = 0.8000000000001819\n",
+      "Remainder = 0.6000000000003638\n",
+      "Remainder = 0.2000000000007276\n",
+      "Remainder = 0.4000000000014552\n",
+      "Remainder = 0.8000000000029104\n",
+      "Remainder = 0.6000000000058208\n",
+      "Remainder = 0.20000000001164153\n",
+      "Remainder = 0.40000000002328306\n",
+      "Remainder = 0.8000000000465661\n",
+      "Remainder = 0.6000000000931323\n",
+      "Remainder = 0.20000000018626451\n",
+      "Remainder = 0.40000000037252903\n",
+      "Remainder = 0.8000000007450581\n",
+      "Remainder = 0.6000000014901161\n",
+      "Remainder = 0.20000000298023224\n",
+      "Remainder = 0.4000000059604645\n",
+      "Remainder = 0.800000011920929\n",
+      "Remainder = 0.6000000238418579\n",
+      "Remainder = 0.20000004768371582\n",
+      "Remainder = 0.40000009536743164\n",
+      "Remainder = 0.8000001907348633\n",
+      "Remainder = 0.6000003814697266\n",
+      "Remainder = 0.20000076293945312\n",
+      "Remainder = 0.40000152587890625\n",
+      "Remainder = 0.8000030517578125\n",
+      "Remainder = 0.600006103515625\n",
+      "Remainder = 0.20001220703125\n",
+      "Remainder = 0.4000244140625\n",
+      "Remainder = 0.800048828125\n",
+      "Remainder = 0.60009765625\n",
+      "Remainder = 0.2001953125\n",
+      "Remainder = 0.400390625\n",
+      "Remainder = 0.80078125\n",
+      "Remainder = 0.6015625\n",
+      "Remainder = 0.203125\n",
+      "Remainder = 0.40625\n",
+      "Remainder = 0.8125\n",
+      "Remainder = 0.625\n",
+      "Remainder = 0.25\n",
+      "Remainder = 0.5\n",
+      "The binary representation is .0001100110011001100110011001100110011001100110011001101\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "x = float(input(\"Enter an decimal: \"))\n",
+    "p = 0\n",
+    "\n",
+    "while ((2**p)*x) % 1 != 0:\n",
+    "    print(f'Remainder = {(2**p)*x - int((2**p)*x)}')\n",
+    "    p += 1\n",
+    "num = int((2**p)*x)\n",
+    "\n",
+    "if num < 0 :\n",
+    "    is_neg = True\n",
+    "    num = -num\n",
+    "else:\n",
+    "    is_neg = False\n",
+    "\n",
+    "result = ''\n",
+    "if num == 0:\n",
+    "    result = '0'\n",
+    "while num > 0:\n",
+    "    result = str(num % 2) + result\n",
+    "    num = num // 2\n",
+    "\n",
+    "\n",
+    "for i in range(p - len(result)):\n",
+    "    result = \"0\" + result\n",
+    "\n",
+    "\n",
+    "result = result[0:-p] + \".\" + result[-p:]\n",
+    "if is_neg:\n",
+    "    result = \"-\" + result\n",
+    "print(\"The binary representation is\", result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f16818f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num_guesses =  100000 guess = 9.999999999990033\n",
+      "difference =  54221.0000000002\n",
+      "num_guesses =  200000 guess = 19.99999999996673\n",
+      "difference =  53921.00000000133\n",
+      "num_guesses =  300000 guess = 29.999999999943423\n",
+      "difference =  53421.0000000034\n",
+      "num_guesses =  400000 guess = 40.00000000020433\n",
+      "difference =  52720.99999998365\n",
+      "num_guesses =  500000 guess = 50.000000000536296\n",
+      "difference =  51820.99999994637\n",
+      "num_guesses =  600000 guess = 60.00000000086826\n",
+      "difference =  50720.99999989581\n",
+      "num_guesses =  700000 guess = 70.00000000120022\n",
+      "difference =  49420.99999983197\n",
+      "num_guesses =  800000 guess = 80.00000000153219\n",
+      "difference =  47920.99999975485\n",
+      "num_guesses =  900000 guess = 90.00000000186415\n",
+      "difference =  46220.999999664455\n",
+      "num_guesses =  1000000 guess = 100.00000000219612\n",
+      "difference =  44320.99999956078\n",
+      "num_guesses =  1100000 guess = 110.00000000252808\n",
+      "difference =  42220.999999443826\n",
+      "num_guesses =  1200000 guess = 120.00000000286005\n",
+      "difference =  39920.999999313586\n",
+      "num_guesses =  1300000 guess = 130.000000003192\n",
+      "difference =  37420.999999170075\n",
+      "num_guesses =  1400000 guess = 140.00000000352398\n",
+      "difference =  34720.999999013286\n",
+      "num_guesses =  1500000 guess = 150.00000000385594\n",
+      "difference =  31820.999998843217\n",
+      "num_guesses =  1600000 guess = 160.0000000041879\n",
+      "difference =  28720.999998659867\n",
+      "num_guesses =  1700000 guess = 170.00000000451988\n",
+      "difference =  25420.99999846324\n",
+      "num_guesses =  1800000 guess = 180.00000000485184\n",
+      "difference =  21920.999998253337\n",
+      "num_guesses =  1900000 guess = 190.0000000051838\n",
+      "difference =  18220.99999803015\n",
+      "num_guesses =  2000000 guess = 200.00000000551577\n",
+      "difference =  14320.99999779369\n",
+      "num_guesses =  2100000 guess = 210.00000000584774\n",
+      "difference =  10220.99999754395\n",
+      "num_guesses =  2200000 guess = 220.0000000061797\n",
+      "difference =  5920.999997280931\n",
+      "num_guesses =  2300000 guess = 230.00000000651167\n",
+      "difference =  1420.9999970046338\n",
+      "num_guesses =  2330687\n",
+      "last guess = 233.06870000661354\n",
+      "Failed to find the square root of 54321\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 54321\n",
+    "epsilon = 0.01\n",
+    "num_guesses = 0\n",
+    "guess = 0.0\n",
+    "incresement = 0.0001\n",
+    "\n",
+    "while abs(guess**2 - x) >= epsilon and guess**2 <= x:\n",
+    "    guess += incresement\n",
+    "    num_guesses += 1\n",
+    "    if num_guesses % 100000 == 0:\n",
+    "        print('num_guesses = ', num_guesses, 'guess =', guess)\n",
+    "        print('difference = ', abs(guess**2 - x))\n",
+    "\n",
+    "\n",
+    "print('num_guesses = ', num_guesses)\n",
+    "print(\"last guess =\", guess)\n",
+    "if abs(guess**2 - x) >= epsilon:\n",
+    "    print('Failed to find the square root of', x)\n",
+    "else:\n",
+    "    print(guess, 'is close to the square root of', x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f98640fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num of loops =  36\n",
+      "233.0686594227518 is close to the square root of 54321\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 54321\n",
+    "epsilon = 0.0001\n",
+    "low = 0.0\n",
+    "high = x\n",
+    "guess = (high + low)/2\n",
+    "n = 0\n",
+    "\n",
+    "while abs(guess**2 - x) >= epsilon:\n",
+    "    n += 1\n",
+    "    if guess**2 < x:\n",
+    "        low = guess\n",
+    "    else:\n",
+    "        high = guess\n",
+    "    guess = (high + low)/2\n",
+    "    \n",
+    "print('num of loops = ', n)\n",
+    "print(guess, 'is close to the square root of', x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2717129f",
    "metadata": {},
    "outputs": [],
    "source": []
